--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
   <div class="before"></div>
   <div class="after"></div>
 </div>
+<h1>From Eren </h1>
 <h2>Happy Birthday Katherine!</h2>
 <div class="candle">
    <div id="flame" class="lit"></div>
