--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <link rel="stylesheet" href="styles.css">
 
   <bokeh></bokeh>
+  <bokeh></bokeh>
+  <bokeh></bokeh>
+  <bokeh></bokeh>
+  <bokeh></bokeh>
+  <bokeh></bokeh>
+  <bokeh></bokeh>
+  <bokeh></bokeh>
+  <bokeh></bokeh>
+  <bokeh></bokeh>
+  <bokeh></bokeh>
 
 <div class="mobile">Open in desktop</div>
 <div class="pyro">
