--- a/index.html
+++ b/index.html
@@ -1,60 +1,26 @@
-<link rel="stylesheet" href="styles.css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Birthday Greeting</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="mobile">Open in desktop</div>
+    <div class="pyro">
+        <div class="before"></div>
+        <div class="after"></div>
+    </div>
+    <h1>From Eren</h1>
+    <h2>Happy Birthday Katherine!</h2>
+    <div class="candle">
+        <div id="flame" class="lit"></div>
+    </div>
+    <div class="cake"></div>
+    <div class="plate"></div>
 
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-  <bokeh></bokeh>
-<div class="mobile">Open in desktop</div>
-<div class="pyro">
-  <div class="before"></div>
-  <div class="after"></div>
-</div>
-<h1>From Eren </h1>
-<h2>Happy Birthday Katherine!</h2>
-<div class="candle">
-   <div id="flame" class="lit"></div>
-</div>
-
-<div class="cake"></div>
-<div class="plate"></div>
+    <!-- Button to navigate to FlowersforKatherine page -->
+    <a href="FlowersforKatherine.html" class="flower-button">Flowers for Katherine</a>
+</body>
+</html>
