--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Birthday Greeting</title>
+    <title>Katherine's Birthday Cake</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -21,6 +21,6 @@
     <div class="plate"></div>
 
     <!-- Button to navigate to FlowersforKatherine page -->
-    <a href="FlowersforKatherine.html" class="flower-button">Flowers for Katherine</a>
+    <a href="FlowersforKatherine.html" class="flower-button">Click for another surprise!</a>
 </body>
 </html>
