--- a/FlowersforKatherine.html
+++ b/FlowersforKatherine.html
@@ -19,7 +19,7 @@
     </style>
 </head>
     <body class="not-loaded">
-        <div class="message">So glad you were born to be a part of our lives Katherine. These virtual flowers are for you.</div>
+        <div class="message">So glad you were born to be a part of our lives Katherine. These flowers are for you.</div>
         <audio autoplay>
             <source src="glitter.mp3" type="audio/mpeg">
             <source src="glitter.ogg" type="audio/ogg">
