--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <audio autoplay>
+    <source src="fireworks.mp3" type="audio/mpeg">
+    <source src="fireworks.ogg" type="audio/ogg">
+    Your browser does not support the audio element.
+</audio>
     <div class="mobile">Open in desktop</div>
     <div class="pyro">
         <div class="before"></div>
