--- a/index.html
+++ b/index.html
@@ -3,29 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Katherine's Birthday Cake</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>For Katherine. By Eren.</title>
+    <style>
+        body {
+            background-color: black;
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .content {
+            text-align: center;
+        }
+        .continue-link {
+            font-size: 24px;
+            text-decoration: none;
+            color: white;
+            border: 2px solid white;
+            padding: 10px 20px;
+            border-radius: 5px;
+            transition: background-color 0.3s, color 0.3s;
+        }
+        .continue-link:hover {
+            background-color: white;
+            color: black;
+        }
+    </style>
 </head>
 <body>
-  <audio autoplay>
-    <source src="fireworks.mp3" type="audio/mpeg">
-    <source src="fireworks.ogg" type="audio/ogg">
-    Your browser does not support the audio element.
-</audio>
-    <div class="mobile">Open in desktop</div>
-    <div class="pyro">
-        <div class="before"></div>
-        <div class="after"></div>
+    <div class="content">
+        <h1>For Katherine. By Eren.</h1>
+        <a href="indexsecond.html" class="continue-link">Click to continue</a>
     </div>
-    <h1>From Eren</h1>
-    <h2>Happy Birthday Katherine!</h2>
-    <div class="candle">
-        <div id="flame" class="lit"></div>
-    </div>
-    <div class="cake"></div>
-    <div class="plate"></div>
-
-    <!-- Button to navigate to FlowersforKatherine page -->
-    <a href="FlowersforKatherine.html" class="flower-button">Click for another surprise!</a>
+    
+    <script>
+        document.body.addEventListener('click', function() {
+            window.location.href = 'indexsecond.html';
+        });
+    </script>
 </body>
 </html>
