--- a/index.html
+++ b/index.html
@@ -17,25 +17,29 @@
         .content {
             text-align: center;
         }
-        .continue-link {
-            font-size: 24px;
-            text-decoration: none;
-            color: white;
-            border: 2px solid white;
-            padding: 10px 20px;
-            border-radius: 5px;
-            transition: background-color 0.3s, color 0.3s;
+        .flash-text {
+            font-size: 36px;
+            animation: flash 1s infinite alternate;
         }
-        .continue-link:hover {
-            background-color: white;
-            color: black;
+        .click-text {
+            font-size: 24px;
+            animation: flash 1s infinite alternate-reverse;
+            margin-top: 20px; /* Adding some space between the texts */
+        }
+        @keyframes flash {
+            0% {
+                opacity: 1;
+            }
+            100% {
+                opacity: 0.5;
+            }
         }
     </style>
 </head>
 <body>
     <div class="content">
-        <h1>For Katherine. By Eren.</h1>
-        <a href="indexsecond.html" class="continue-link">Click to continue</a>
+        <h1 class="flash-text">For Katherine. By Eren.</h1>
+        <p class="click-text">Click anywhere to continue</p>
     </div>
     
     <script>
