--- a/indexsecond.html
+++ b/indexsecond.html
@@ -17,6 +17,7 @@
         <div class="before"></div>
         <div class="after"></div>
     </div>
+    <h1>Happy Birthday Katherine!</h1>
     <h2>Happy Birthday Katherine!</h2>
     <div class="candle">
         <div id="flame" class="lit"></div>
