--- a/FlowersforKatherine.html
+++ b/FlowersforKatherine.html
@@ -19,12 +19,8 @@
     </style>
 </head>
     <body class="not-loaded">
-            <div class="message">
-              So glad you were born Katherine.
-            </div>
-            <div class="flowers">
-              These flowers are for you.
-            </div>
+        <div class="message">Happy you were born Katherine. These flowers are for you.</div>
+        <audio autoplay>
             <source src="glitter.mp3" type="audio/mpeg">
             <source src="glitter.ogg" type="audio/ogg">
             Your browser does not support the audio element.
