--- a/indexsecond.html
+++ b/indexsecond.html
@@ -17,8 +17,8 @@
         <div class="before"></div>
         <div class="after"></div>
     </div>
-    <h1>Happy 19th Birthday Katherine!</h1>
-    <h2>Happy 19th Birthday Katherine!</h2>
+    <h1>Happy 19<sup>th</sup> Birthday Katherine!</h1>
+    <h2>Happy 19<sup>th</sup> Birthday Katherine!</h2>
     <div class="candle">
         <div id="flame" class="lit"></div>
     </div>
